$Id: History,v 1.38 2002-02-14 11:11:53 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

13/02/2002 : R. Chytracek      breps-V04-00-02
- Bug fix #354:
  o Added new private method for creation of planar surfaces gained
    after code refactoring in constructor.
  o Fixed bug for problem report #354 by adding the code handling the cases
    where user supplies for the same z-section different RMIN or RMAX values.
  o This is temporary commit as there is still the problem when user asks for
    polyhedra phi segment and z[a] > z[a+1]. This leads to a wrong surface.

12/02/2002 : R. Chytracek
- Bug fixes of G4BREPSolidPolyhedra:
  o Added enhancement allowing to define RMIN and RMAX to be zero with the
    exception of forbidden two consecutive zero RMAX values.
  o Refactoring in constructor gained two new private methods for creation of
    trapezoidal and triangular side planes of G4BREPSolidPolyhedra.
  o Rewritten code for delta phi >= 2*PI case with full classification of
    possible cases.
  o Fixed sense of end planes.
  o Fixed delta phi < 2*PI case where some old code remained after bug fix #266.

28/01/2002 : R. Chytracek	breps-V04-00-01